--- a/src/frontend/src/assets/scss/layout/header.scss
+++ b/src/frontend/src/assets/scss/layout/header.scss
@@ -100,3 +100,37 @@
     color: $white;
   }
 }
+
+.header__logout {
+  &::before {
+    display: inline-block;
+
+    width: 32px;
+    height: 32px;
+    margin-right: 8px;
+
+    content: '';
+    vertical-align: middle;
+
+    background: url('~@/assets/img/login.svg') no-repeat center;
+    background-size: auto 50%;
+  }
+}
+
+
+.header__login {
+  &::after {
+    display: inline-block;
+
+    width: 32px;
+    height: 32px;
+    margin-left: 8px;
+
+    content: '';
+    vertical-align: middle;
+
+    background: url('~@/assets/img/login.svg') no-repeat center;
+    background-size: auto 50%;
+  }
+}
+
