--- a/src/frontend/src/assets/scss/app.scss
+++ b/src/frontend/src/assets/scss/app.scss
@@ -1,5 +1,6 @@
 // general
 @import "libs/normalize.scss";
+@import "libs/animation.scss";
 @import "fonts.scss";
 @import "ds-system/ds.scss";
 @import "visually-hidden.scss";
