--- a/src/frontend/src/assets/scss/libs/animation.scss
+++ b/src/frontend/src/assets/scss/libs/animation.scss
@@ -10,6 +10,26 @@
   }
 }
 
-.slide-in-left-enter-active {
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.slide-in-left {
   animation: slide-in-left 0.6s;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.6s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
